--- a/web/templates/user/new.html.eex
+++ b/web/templates/user/new.html.eex
@@ -1,37 +1,37 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <ul>
-      <%= for error <- @changeset.errors do %>
+      <%= for {title, error} <- @changeset.errors do %>
         <li>
-          <%= elem(error, 0) %>
-          <%= elem(error, 1) %>
+          <%= title %>
+          <%= error %>
         </li>
       <% end %>
     </ul>
 
     <%= form_for @changeset, user_path(@conn, :create), [class: "form-horizontal"], fn f -> %>
       <div class="form-group">
-        <label> E-mail </label>
+        <%= label f, :email, "E-mail" %>
         <%= email_input f, :email, [class: "form-control"] %>
       </div>
 
       <div class="form-group">
-        <label> Password </label>
+        <%= label f, :password, "Password" %>
         <%= password_input f, :password, [class: "form-control"] %>
       </div>
 
       <div class="form-group">
-        <label> Password Confirmation </label>
+        <%= label f, :password_confirmation, "Password Confirmation" %>
         <%= password_input f, :password_confirmation, [class: "form-control"] %>
       </div>
 
       <div class="form-group">
-        <label> First Name </label>
+        <%= label f, :first_name %>
         <%= text_input f, :first_name, [class: "form-control"] %>
       </div>
 
       <div class="form-group">
-        <label> Last Name </label>
+        <%= label f, :last_name %>
         <%= text_input f, :last_name, [class: "form-control"] %>
       </div>
 
