--- a/web/templates/product/index.html.eex
+++ b/web/templates/product/index.html.eex
@@ -3,6 +3,7 @@
     <tr>
       <th> SKU </th>
       <th> Item Name </th>
+      <th> Category </th>
       <th> Description </th>
       <th> Actions </th>
     </tr>
@@ -12,6 +13,7 @@
       <tr>
         <td> <%= product.sku %> </td>
         <td> <%= product.name %> </td>
+        <td> <%= product.category.name %> </td>
         <td> <%= product.description %> </td>
         <td>
           <%= link("Show", to: product_path(@conn, :show, product)) %>
