--- a/web/templates/product/new.html.eex
+++ b/web/templates/product/new.html.eex
@@ -9,7 +9,7 @@
       <% end %>
     </ul>
 
-    <%= form_for @changeset, product_path(@conn, :create), [class: "form-horizontal"], fn f -> %>
+    <%= form_for @changeset, product_path(@conn, :create), [class: "form-horizontal", multipart: true], fn f -> %>
       <div class="form-group">
         <%= label f, :item_code %>
         <%= text_input f, :item_code, [class: "form-control"] %>
@@ -24,8 +24,18 @@
         <%= label f, :name %>
         <%= text_input f, :name, [class: "form-control"] %>
       </div>
+
+      <div class="form-group">
+        <%= label f, :category_id %>
+        <%= select f, :category_id, @categories, [prompt: "Choose a category", class: "form-control"] %>
+      </div>
       
       <hr/>
+
+      <div class="form-group">
+        <%= label f, :image_path %>
+        <%= file_input f, :image_path, [class: "form-control"] %>
+      </div>
 
       <div class="form-group">
         <%= label f, :color %>
