--- a/web/templates/product/new.html.eex
+++ b/web/templates/product/new.html.eex
@@ -26,6 +26,11 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :price %>
+        <%= number_input f, :price, [class: "form-control", min: 1] %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :category_id %>
         <%= select f, :category_id, @categories, [prompt: "Choose a category", class: "form-control"] %>
       </div>
