--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -7,13 +7,37 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Phoenix!</title>
+    <title>Bangis</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
-    <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-    <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+
+    <p class="alert alert-info notifications" role="alert"><%= get_flash(@conn, :info) %></p>
+    <p class="alert alert-danger notifications" role="alert"><%= get_flash(@conn, :error) %></p>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link("Now Geek Out", to: page_path(@conn, :index), class: "navbar-brand") %>
+        </div>
+        <div class="collapse navbar-collapse" id="collapser">
+          <ul class="nav navbar-nav navbar-right">
+            <li> <%= link("Users", to: user_path(@conn, :index)) %> </li>
+            <li> <%= link("Orders", to: order_path(@conn, :index)) %> </li>
+            <li> <%= link("Products", to: product_path(@conn, :index)) %> </li>
+            <li> <%= link("Customers", to: customer_path(@conn, :index)) %> </li>
+            <li> <%= link("Categories", to: category_path(@conn, :index)) %> </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <div class="row">
       <div class="col-md-12">
